--- a/src/partials/oxford.html
+++ b/src/partials/oxford.html
@@ -6,10 +6,14 @@
     </div>
     <a href="#no-scrolling" class="btn-reset btn-all oxford__link">Ознакомиться</a>
   </div>
-  <picture>
-    <source srcset="img/oxford/oxford-bg.avif" type="image/avif">
-    <source srcset="img/oxford/oxford-bg.webp" type="image/webp">
-    <img loading="lazy" src="img/oxford/oxford-bg.png" class="oxford__image" width="1920" height="600" alt="Фоновая картинка - Oxford">
+  <picture class="oxford__picture">
+    <source srcset="img/oxford/oxford-bg320@1x.webp, img/oxford/oxford-bg320@2x.webp 2x, img/oxford/oxford-bg320@3x.webp 3x" type="image/webp" media="(max-width: 576px)">
+    <source srcset="img/oxford/oxford-bg320@1x.png, img/oxford/oxford-bg320@2x.png 2x, img/oxford/oxford-bg320@3x.png 3x" media="(max-width: 576px)">
+    <source srcset="img/oxford/oxford-bg768@1x.webp, img/oxford/oxford-bg768@2x.webp 2x, img/oxford/oxford-bg768@3x.webp 3x" type="image/webp" media="(max-width: 768px)">
+    <source srcset="img/oxford/oxford-bg768@1x.png, img/oxford/oxford-bg768@2x.png 2x, img/oxford/oxford-bg768@3x.png 3x" media="(max-width: 768px)">
+    <source srcset="img/oxford/oxford-bg1024@1x.webp, img/oxford/oxford-bg1024@2x.webp 2x, img/oxford/oxford-bg1024@3x.webp 3x" type="image/webp" media="(max-width: 1024px)">
+    <source srcset="img/oxford/oxford-bg1024@1x.png, img/oxford/oxford-bg1024@2x.png 2x, img/oxford/oxford-bg1024@3x.png 3x" media="(max-width: 1024px)">
+    <source srcset="img/oxford/oxford-bg1920@1x.webp, img/oxford/oxford-bg1920@2x.webp 2x, img/oxford/oxford-bg1920@3x.webp 3x" type="image/webp">
+    <img loading="lazy" src="img/oxford/oxford-bg1920@1x.png" srcset="img/oxford/oxford-bg1920@2x.png 2x, img/oxford/oxford-bg1920@3x.png 3x" class="oxford__picture-image" width="1920" height="600" alt="Фоновая картинка - Oxford">
   </picture>
 </section>
-
