--- a/src/scss/components/_oxford.scss
+++ b/src/scss/components/_oxford.scss
@@ -1,4 +1,12 @@
 .oxford {
+  position: relative;
+  height: 600px;
+
+  @include mobile {
+    & {
+      height: 302px;
+    }
+  }
 
   &__container {
     position: relative;
@@ -8,6 +16,21 @@
     position: absolute;
     max-width: 508px;
     top: 154px;
+    z-index: 2;
+
+    @include high-tablet {
+      & {
+        left: 36px;
+      }
+    }
+
+    @include mobile {
+      & {
+        top: 32px;
+        left: 12px;
+        max-width: 187px;
+      }
+    }
   }
 
   &__title {
@@ -17,29 +40,71 @@
     font-size: 60px;
     line-height: 120%;
     color: var(--gold-color);
+
+    @include mobile {
+      & {
+        font-size: 24px;
+      }
+    }
   }
 
   &__text {
-    margin-bottom: 49px;
     font-family: 'Open Sans';
     font-weight: 400;
     font-size: 48px;
     line-height: 57.6px;
     color: var(--white-color);
+
+    @include mobile {
+      & {
+        font-size: 16px;
+        line-height: 19px;
+      }
+    }
   }
 
   &__link {
     position: absolute;
     top: 390px;
-    padding: 22px 34.5px;
+    padding: 22px 32px;
     border: none;
+    font-weight: 700;
     color: var(--white-color);
     background-color: var(--primary-color);
+    z-index: 2;
+
+    @include high-tablet {
+      & {
+        left: 36px;
+      }
+    }
+
+    @include mobile {
+      & {
+        top: 242px;
+        left: 12px;
+        width: 92.5%;
+      }
+    }
   }
 
-  &__image {
+  &__picture {
+    position: absolute;
+    top: 0;
     width: 100%;
-    height: 600px;
+    // height: 600px;
+    z-index: 1;
+
+    &-image {
+      width: 100%;
+      height: 600px;
+
+      @include mobile {
+        & {
+          height: 210px;
+        }
+      }
+    }
   }
 }
 
